syntax = "proto3";

package calendar;
option go_package = "./";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Calendar{
  rpc AddEvent(AddEventRequest) returns (AddEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (EventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (EventResponse);
  rpc GetEventsForDay(GetEventsRequest) returns (GetEventsResponse);
  rpc GetEventsForWeek(GetEventsRequest) returns (GetEventsResponse);
  rpc GetEventsForMonth(GetEventsRequest) returns (GetEventsResponse);
}

message AddEventRequest{
   Event event = 1;
}

message AddEventResponse{
  string created_id = 1;
}

message UpdateEventRequest{
  string event_id = 1;
  Event updated_event = 2;
}

message DeleteEventRequest{
  string event_id = 1;
}

message EventResponse{
  Status status = 1;
  string message = 2;
}

message GetEventsRequest{
  google.protobuf.Timestamp fromDay = 1;
}

message GetEventsResponse{
    repeated Event events = 1;
}

enum Status {
  STATUS_SUCCESS = 0;
  STATUS_FAILED = 1;
}

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string user_id = 4;
  google.protobuf.Timestamp date_time = 5;
  google.protobuf.Duration duration = 6;
  google.protobuf.Duration notified_before = 7;
}